# Todo_gtk4

./: Cargo.toml  Todo.rs  Todo.ui  build.rs
src/: main.rs  org.gtk_rs.Todo.gschema.xml  utils.rs
src/collection_object/: imp.rs  mod.rs
src/resources/: resources.gresource.xml  shortcuts.ui  style.css  task_row.ui  window.ui
src/task_object/: imp.rs  mod.rs
src/task_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
