[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.2", package = "libadwaita" }
gtk = { version = "0.7.2", package = "gtk4" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[build-dependencies]
glib-build-tools = "0.18.0"
